@@ -1,14 +1,13 @@
 package driver;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 import utility.MLP;
 import utility.Value;
-import java.lang.Math;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Arrays;
 
 public class Main {
     public static void main(String[] args) {
-        MLP n = new MLP(3.0,List.of(4.0,4.0,1.0));
+        MLP n = new MLP(3, Arrays.asList(4, 4, 1));
 
         List<List<Double>> xs = Arrays.asList(
                 Arrays.asList(2.0, 3.0, -1.0),
@@ -16,33 +15,40 @@ public class Main {
                 Arrays.asList(0.5, 1.0, 1.0),
                 Arrays.asList(1.0, 1.0, -1.0)
         );
-        List<Double> ys = List.of(1.0,-1.0,-1.0,1.0);
-        Value loss = new Value(0.0);
 
-        for(int i=0;i<20;i++){
+        List<Double> ys = Arrays.asList(1.0, -1.0, -1.0, 1.0);
+
+        for (int k = 0; k < 20; k++) {
             List<Value> ypred = new ArrayList<>();
-            for(List<Double> x : xs) {
-                List<Value> newX = new ArrayList<>();
-                for (Double x1 : x) {
-                    newX.add(new Value(x1));
+
+            // Forward pass
+            for (List<Double> x : xs) {
+                List<Value> xValues = new ArrayList<>();
+                for (Double xi : x) {
+                    xValues.add(new Value(xi));
                 }
-                ypred.addAll(n.call(newX));
+                ypred.add(n.call(xValues).get(0)); // Assuming MLP output is a single Value
             }
 
-            for(int j=0;j<ypred.size();j++){
-                loss = loss.add(Math.pow((ypred.get(j).data - ys.get(j)),2));
-            }
-            for(Value p : n.parameters()) {
-                p.grad = 0.0;
+            Value loss = new Value(0.0);
+            for (int i = 0; i < ys.size(); i++) {
+                Value diff = ypred.get(i).sub(new Value(ys.get(i)));
+                loss = loss.add(diff.pow(2));
             }
 
+            for (Value p : n.parameters()) {
+                p.setGrad(0.0);
+            }
+
+            // Backward pass
             loss.backward();
 
-            for(Value p : n.parameters()) {
-                p.data += -0.1*p.grad;
-
+            // Update
+            for (Value p : n.parameters()) {
+                p.setData(p.getData() - 0.05 * p.getGrad());
             }
-            System.out.println(i +" "+ loss.data);
+
+            System.out.println(k + " = " + loss.getData());
         }
     }
 }
